--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -777,7 +777,7 @@
 %  correctly.
 %    \begin{macrocode}
 \cs_if_exist:NTF \@expl@finalise@setup@@ % \@@_gset:n
-  { \tl_gsput_right:Nn \@expl@finalise@setup@@ }
+  { \tl_gput_right:Nn \@expl@finalise@setup@@ }
   { \use:n }
   {
     \@@_new:N \c_code_cctab
@@ -793,7 +793,7 @@
       \char_set_catcode_letter:n           { 95 }  % underscore
       \char_set_catcode_other:n            { 124 } % pipe
       \char_set_catcode_space:n            { 126 } % tilde
-      \@@_gset:n \c_code_cctab
+      \@@_gset:n { \c_code_cctab }
     \group_end:
     \cctab_const:Nn \c_document_cctab
       {
@@ -805,7 +805,7 @@
         \char_set_catcode_other:n          { 64 }
         \char_set_catcode_math_subscript:n { 95 }
         \char_set_catcode_active:n         { 126 }
-  }
+      }
   }
 %    \end{macrocode}
 % \end{variable}
