Update updated dates, mostly because cctabs now contain endlinechar

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -56,7 +56,7 @@
 %
 % \section{Creating and initialising category code tables}
 %
-% \begin{function}{\cctab_new:N,\cctab_new:c}
+% \begin{function}[updated = 2020-07-02]{\cctab_new:N,\cctab_new:c}
 %   \begin{syntax}
 %     \cs{cctab_new:N} \meta{category code table}
 %   \end{syntax}
@@ -89,7 +89,7 @@
 %
 % \section{Using category code tables}
 %
-% \begin{function}{\cctab_begin:N,\cctab_begin:c}
+% \begin{function}[updated = 2020-07-02]{\cctab_begin:N,\cctab_begin:c}
 %   \begin{syntax}
 %     \cs{cctab_begin:N} \meta{category code table}
 %   \end{syntax}
@@ -99,7 +99,7 @@
 %   \cs{cctab_end:}. This function does not start a \TeX{} group.
 % \end{function}
 %
-% \begin{function}{\cctab_end:}
+% \begin{function}[updated = 2020-07-02]{\cctab_end:}
 %   \begin{syntax}
 %     \cs{cctab_end:}
 %   \end{syntax}
@@ -110,7 +110,7 @@
 %   matching \cs{cctab_begin:N}.
 % \end{function}
 %
-% \begin{function}[added = 2020-05-19]{\cctab_select:N}
+% \begin{function}[added = 2020-05-19, updated = 2020-07-02]{\cctab_select:N}
 %   \begin{syntax}
 %     \cs{cctab_select:N} \meta{category code table}
 %   \end{syntax}
@@ -122,7 +122,7 @@
 %
 % \section{Category code table conditionals}
 %
-% \begin{function}[pTF]{\cctab_if_exist:N,\cctab_if_exist:c}
+% \begin{function}[pTF]{\cctab_if_exist:N, \cctab_if_exist:c}
 %   \begin{syntax}
 %     \cs{cctab_if_exist_p:N} \meta{category code table}
 %     \cs{cctab_if_exist:NTF} \meta{category code table} \Arg{true code} \Arg{false code}
@@ -134,29 +134,29 @@
 %
 % \section{Constant category code tables}
 %
-% \begin{variable}{\c_code_cctab}
+% \begin{variable}[updated = 2020-07-10]{\c_code_cctab}
 %   Category code table for the \pkg{expl3} code environment; this does
 %   \emph{not} include \texttt{@}, which is retained as an \enquote{other}
 %   character.
 % \end{variable}
 %
-% \begin{variable}{\c_document_cctab}
+% \begin{variable}[updated = 2020-07-08]{\c_document_cctab}
 %   Category code table for a standard \LaTeX{} document, as set by the \LaTeX{}
 %   kernel. In particular, the upper-half of the $8$-bit range will be set to
 %   \enquote{active} with \pdfTeX{} \emph{only}. No \pkg{babel} shorthands
 %   will be activated.
 % \end{variable}
 %
-% \begin{variable}{\c_initex_cctab}
+% \begin{variable}[updated = 2020-07-02]{\c_initex_cctab}
 %   Category code table as set up by \IniTeX{}.
 % \end{variable}
 %
-% \begin{variable}{\c_other_cctab}
+% \begin{variable}[updated = 2020-07-02]{\c_other_cctab}
 %   Category code table where all characters have category code $12$
 %   (other).
 % \end{variable}
 %
-% \begin{variable}{\c_str_cctab}
+% \begin{variable}[updated = 2020-07-02]{\c_str_cctab}
 %   Category code table where all characters have category code $12$
 %   (other) with the exception of spaces, which have category code
 %   $10$ (space).
