--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1113,6 +1113,7 @@
 %    \begin{macrocode}
   \@@_primitive:NN \autospacing           \tex_autospacing:D
   \@@_primitive:NN \autoxspacing          \tex_autoxspacing:D
+  \@@_primitive:NN \currentcjktoken       \tex_currentcjktoken:D
   \@@_primitive:NN \currentspacingmode    \tex_currentspacingmode:D
   \@@_primitive:NN \currentxspacingmode   \tex_currentxspacingmode:D
   \@@_primitive:NN \disinhibitglue        \tex_disinhibitglue:D
