Document two kernel_intarray functions

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -162,6 +162,33 @@
 %   than once.
 % \end{function}
 %
+% \begin{function}[added = 2018-03-31]{\__kernel_intarray_gset:Nnn}
+%   \begin{syntax}
+%     \cs{__kernel_intarray_gset:Nnn} \meta{intarray~var} \Arg{index} \Arg{value}
+%   \end{syntax}
+%   Faster version of \cs{intarray_gset:Nnn}.  Stores the \meta{value}
+%   into the \meta{integer array variable} at the \meta{position}.  The
+%   \meta{index} and \meta{value} must be suitable for a direct
+%   assignment to a \TeX{} count register, for instance expanding to an
+%   integer denotation or obtained through the primitive \tn{numexpr}
+%   (which may be un-terminated).  No bound checking is performed: the
+%   caller is responsible for ensuring that the \meta{position} is
+%   between $1$ and the \cs{intarray_count:N}, and the \meta{value}'s
+%   absolute value is at most $2^{30}-1$.  Assignments are always
+%   global.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2018-03-31]{\__kernel_intarray_item:Nn}
+%   \begin{syntax}
+%     \cs{__kernel_intarray_item:Nn} \meta{intarray~var} \Arg{index}
+%   \end{syntax}
+%   Faster version of \cs{intarray_item:Nn}.  Expands to the integer
+%   entry stored at the \meta{index} in the \meta{integer array
+%   variable}.  The \meta{index} must be suitable for a direct
+%   assignment to a \TeX{} count register and must be between $1$ and
+%   the \cs{intarray_count:N}, lest a low-level \TeX{} error occur.
+% \end{function}
+%
 % \begin{function}{\__kernel_ior_open:Nn, \__kernel_ior_open:No}
 %   \begin{syntax}
 %     \cs{__kernel_ior_open:Nn} \meta{stream} \Arg{file name}
