Reduce constraints on some integers since toks have fewer uses in l3regex

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -4661,7 +4661,7 @@
 \cs_new_protected:Npn \@@_match:n #1
   {
     \int_zero:N \l_@@_balance_int
-    \int_set:Nn \l_@@_curr_pos_int { 2 * \l_@@_max_state_int }
+    \int_set:Nn \l_@@_curr_pos_int { 1 + \l_@@_max_state_int }
     \@@_query_set:nnn { } { -1 } { -2 }
     \int_set_eq:NN \l_@@_min_pos_int \l_@@_curr_pos_int
     \tl_analysis_map_inline:nn {#1}
@@ -4674,12 +4674,8 @@
 \cs_new_protected:Npn \@@_match_cs:n #1
   {
     \int_zero:N \l_@@_balance_int
-    \int_set:Nn \l_@@_curr_pos_int % ^^A TODO: change
-      {
-        \int_max:nn { 2 * \l_@@_max_state_int - \l_@@_min_state_int }
-        { \l_@@_max_pos_int }
-        + 1
-      }
+    \int_set:Nn \l_@@_curr_pos_int
+      { 1 + \int_max:nn \l_@@_max_state_int \l_@@_max_pos_int }
     \@@_query_set:nnn { } { -1 } { -2 }
     \int_set_eq:NN \l_@@_min_pos_int \l_@@_curr_pos_int
     \str_map_inline:nn {#1}
