Refactor cctab message to avoid hard-coding English words

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -624,7 +624,7 @@
           { \cs_set_eq:cN { @@_group_ #1 _chk: } \tex_undefined:D }
           {
             \__kernel_msg_error:nnx { kernel } { cctab-group-mismatch }
-              { different~group }
+              { 0 }
           }
       }
       {
@@ -632,7 +632,7 @@
           {
             \int_compare:nNnTF
                 { \tex_currentgrouplevel:D } < { \l_@@_internal_b_tl }
-              { lower } { higher } ~group~level
+                { -1 } { 1 }
           }
       }
   }
@@ -834,7 +834,13 @@
   }
 \__kernel_msg_new:nnnn { kernel } { cctab-group-mismatch }
   {
-    \iow_char:N\\cctab_end:~occurred~in~a~#1~than~
+    \iow_char:N\\cctab_end:~occurred~in~a~
+    \int_case:nn {#1}
+      {
+        { 0 } { different~group }
+        { 1 } { higher~group~level }
+        { -1 } { lower~group~level }
+      } ~than~
     the~matching~\iow_char:N\\cctab_begin:N.
   }
   {
