Wrong comment char used in doc
sorry for breaking the build.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1037,7 +1037,7 @@
 % \begin{itemize}
 %   \item[1] begin-group character (|group_begin|, often |{|),
 %   \item[2] end-group character (|group_end|, often |}|),
-%   \item[3] math shift character (|math_toggle|, often |$|), % $
+%   \item[3] math shift character (|math_toggle|, often |$|), %^^A $
 %   \item[4] alignment tab character (|alignment|, often |&|),
 %   \item[6] macro parameter character (|parameter|, often |#|),
 %   \item[7] superscript character (|math_superscript|, often |^|),
