Check all cctab are closed at the end of the TeX run
This is untested because the hook management system is not there
yet.  Did I get the syntax of \hook_gput_code:nnn right?

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -659,6 +659,19 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% Finally, install some code at the end of the \TeX{} run to check that
+% all \cs{cctab_begin:N} were ended by some \cs{cctab_end:}.
+%    \begin{macrocode}
+\cs_if_exist:NT \hook_gput_code:nnn
+  {
+    \hook_gput_code:nnn { enddocument/end } { kernel }
+      {
+        \seq_if_empty:NF \g_@@_stack_seq
+          { \__kernel_msg_error:nn { kernel } { cctab-missing-end } }
+      }
+  }
+%    \end{macrocode}
+%
 % \subsection{Category code table conditionals}
 %
 % \begin{macro}{\cctab_if_exist:N,\cctab_if_exist:c}
@@ -837,6 +850,12 @@
   {
     LaTeX~came~across~a~\iow_char:N\\cctab_end:~without~a~matching~
     \iow_char:N\\cctab_begin:N.~This~command~will~be~ignored.
+  }
+\__kernel_msg_new:nnnn { kernel } { cctab-missing-end }
+  { Missing~\iow_char:N\\cctab_end:~before~end~of~TeX~run. }
+  {
+    LaTeX~came~across~more~\iow_char:N\\cctab_begin:N~than~
+    \iow_char:N\\cctab_end:.
   }
 \__kernel_msg_new:nnnn { kernel } { invalid-cctab }
   { Invalid~\iow_char:N\\catcode~table. }
