--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -147,16 +147,16 @@
 %   {
 %     \prop_put:Nnn,  \prop_put:NnV,  \prop_put:Nno,  \prop_put:Nnx,
 %     \prop_put:NVn,  \prop_put:NVV,  \prop_put:NVx,  \prop_put:Nvx, 
-%     \prop_put:Non,  \prop_put:Noo,
+%     \prop_put:Non,  \prop_put:Noo,, \prop_put:Nxx,
 %     \prop_put:cnn,  \prop_put:cnV,  \prop_put:cno,  \prop_put:cnx,
 %     \prop_put:cVn,  \prop_put:cVV,  \prop_put:cVx,  \prop_put:cvx, 
-%     \prop_put:con,  \prop_put:coo,
+%     \prop_put:con,  \prop_put:coo,  \prop_put:cxx,
 %     \prop_gput:Nnn, \prop_gput:NnV, \prop_gput:Nno, \prop_gput:Nnx,
 %     \prop_gput:NVn, \prop_gput:NVV, \prop_gput:NVx, \prop_gput:Nvx,
-%     \prop_gput:Non, \prop_gput:Noo,
+%     \prop_gput:Non, \prop_gput:Noo, \prop_gput:Nxx,
 %     \prop_gput:cnn, \prop_gput:cnV, \prop_gput:cno, \prop_gput:cnx,
 %     \prop_gput:cVn, \prop_gput:cVV, \prop_gput:cVx, \prop_gput:cvx, 
-%     \prop_gput:con, \prop_gput:coo
+%     \prop_gput:con, \prop_gput:coo, \prop_gput:cxx
 %   }
 %   \begin{syntax}
 %     \cs{prop_put:Nnn} \meta{property list} \Arg{key} \Arg{value}
@@ -1043,19 +1043,19 @@
 %   {
 %     \prop_put:Nnn, \prop_put:NnV, \prop_put:Nno, \prop_put:Nnx,
 %     \prop_put:NVn, \prop_put:NVV, \prop_put:NVx, \prop_put:Nvx,
-%     \prop_put:Non, \prop_put:Noo,
+%     \prop_put:Non, \prop_put:Noo, \prop_put:Nxx,
 %     \prop_put:cnn, \prop_put:cnV, \prop_put:cno, \prop_put:cnx,
 %     \prop_put:cVn, \prop_put:cVV, \prop_put:cVx, \prop_put:cvx,
-%     \prop_put:con, \prop_put:coo
+%     \prop_put:con, \prop_put:coo, \prop_put:cxx
 %   }
 % \begin{macro}[tested = m3prop002]
 %   {
 %     \prop_gput:Nnn, \prop_gput:NnV, \prop_gput:Nno, \prop_gput:Nnx,
 %     \prop_gput:NVn, \prop_gput:NVV, \prop_hput:NVx, \prop_hput:Nvx,
-%     \prop_gput:Non, \prop_gput:Noo,
+%     \prop_gput:Non, \prop_gput:Noo, \prop_gput:Nxx,
 %     \prop_gput:cnn, \prop_gput:cnV, \prop_gput:cno, \prop_gput:cnx,
 %     \prop_gput:cVn, \prop_gput:cVV, \prop_gput:cVx, \prop_gput:cvx,
-%     \prop_gput:con, \prop_gput:coo
+%     \prop_gput:con, \prop_gput:coo, \prop_gput:cxx
 %   }
 % \begin{macro}{\@@_put:NNnn}
 %   Since the branches of \cs{@@_split:NnTF} are used as the replacement
@@ -1085,13 +1085,13 @@
       { #1 #2 { \exp_not:o {#2} \l_@@_internal_tl } }
   }
 \cs_generate_variant:Nn \prop_put:Nnn
-  {     NnV , Nno , Nnx , NV , NVV , NVx , Nvx , No , Noo }
+  {     NnV , Nno , Nnx , NV , NVV , NVx , Nvx , No , Noo , Nxx }
 \cs_generate_variant:Nn \prop_put:Nnn
-  { c , cnV , cno , cnx , cV , cVV , cVx , cvx , co , coo }
+  { c , cnV , cno , cnx , cV , cVV , cVx , cvx , co , coo , cxx }
 \cs_generate_variant:Nn \prop_gput:Nnn
-  {     NnV , Nno , Nnx , NV , NVV , NVx , Nvx , No , Noo }
+  {     NnV , Nno , Nnx , NV , NVV , NVx , Nvx , No , Noo , Nxx }
 \cs_generate_variant:Nn \prop_gput:Nnn
-  { c , cnV , cno , cnx , cV , cVV , cVx , cvx , co , coo }
+  { c , cnV , cno , cnx , cV , cVV , cVx , cvx , co , coo , cxx }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
