Add ability to create new Separation color models
Just Device-based at this stage.

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -116,7 +116,6 @@
 %     \@@_backend_cmyk:n  ,
 %     \@@_backend_gray:n  ,
 %     \@@_backend_rgb:n   ,
-%     \@@_backend_spot:n  ,
 %     \@@_backend_select:n
 %   }
 % \begin{macro}{\@@_backend_reset:}
@@ -130,8 +129,6 @@
   { \@@_backend_select:n { gray ~ #1 } }
 \cs_new_protected:Npn \@@_backend_rgb:n #1
   { \@@_backend_select:n { rgb ~ #1 } }
-\cs_new_protected:Npn \@@_backend_spot:n #1
-  { \@@_backend_select:n {#1} }
 \cs_new_protected:Npn \@@_backend_select:n #1
   {
     \__kernel_backend_literal:n { color~push~ #1 }
@@ -145,6 +142,13 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_family_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_family_separation:nn #1#2
+  { \__kernel_backend_select:n {#1} }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -219,8 +223,7 @@
 %   {
 %     \@@_backend_cmyk:n ,
 %     \@@_backend_gray:n ,
-%     \@@_backend_rgb:n  ,
-%     \@@_backend_spot:n
+%     \@@_backend_rgb:n
 %   }
 % \begin{macro}{\@@_backend_spot:w}
 % \begin{macro}{\@@_backend_select:n}
@@ -235,8 +238,6 @@
   { \@@_backend_select:n { #1 ~ rg ~ #1 ~ RG } }
 \cs_new_protected:Npn \@@_backend_spot:n #1
   { \@@_backend_spot:w #1 \s_@@_stop }
-\cs_new_protected:Npn \@@_backend_spot:w #1 ~ #2 \s_@@_stop
-  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
 \cs_new_protected:Npx \@@_backend_select:n #1
   {
     \cs_if_exist:NTF \tex_pdfextension:D
@@ -256,6 +257,13 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_family_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_family_separation:nn #1#2
+  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
