Correct some backend functions

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -147,7 +147,7 @@
 % \begin{macro}{\@@_backend_family_separation:nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_family_separation:nn #1#2
-  { \__kernel_backend_select:n {#1} }
+  { \@@_backend_select:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
