Implement \peek_regex:nTF and \peek_regex_remove:nTF
These functions check what follows in the input stream, but they
do not give access to it in the T and F branches.  I'll also add
\peek_regex_replace:nnTF that also performs a replacement on the
tokens found.  It might be nice to store the tokens found into
some token list, but unfortunately they can very well have
unbalanced braces.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1035,6 +1035,49 @@
 %   \cs{peek_analysis_map_break:}).
 % \end{function}
 %
+% \begin{function}[added = 2020-07-20, TF]{\peek_regex:n, \peek_regex:N}
+%   \begin{syntax}
+%     \cs{peek_regex:nTF} \Arg{regex} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Tests if the \meta{tokens} that follow in the input stream match the
+%   \meta{regular expression}.  Any \meta{tokens} that have been read
+%   are left in the input stream after the \meta{true code} or
+%   \meta{false code} (as appropriate to the result of the test).  See
+%   \pkg{l3regex} for documentation of the syntax of regular
+%   expressions.  The \meta{regular expression} is implicitly anchored
+%   at the start, so for instance \cs{peek_regex:nTF}~|{|~|a|~|}| is
+%   essentially equivalent to \cs{peek_charcode:NTF}~|a|.
+%   \begin{texnote}
+%     Implicit character tokens are correctly considered by
+%     \cs{peek_regex:nTF} as control sequences, while functions that
+%     inspect individual tokens (for instance \cs{peek_charcode:NTF})
+%     only take into account their meaning.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2020-07-20, TF]
+%   {\peek_regex_remove:n, \peek_regex_remove:N}
+%   \begin{syntax}
+%     \cs{peek_regex_remove:nTF} \Arg{regex} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Tests if the \meta{tokens} that follow in the input stream match the
+%   \meta{regex}.  If the test is true, the \meta{tokens} are removed
+%   from the input stream and the \meta{true code} is inserted, while if
+%   the test is false, the \meta{false code} is inserted followed by the
+%   \meta{tokens} that have been read in the process of matching the
+%   \meta{regex}.  See \pkg{l3regex} for documentation of the syntax of
+%   regular expressions.  The \meta{regular expression} is implicitly
+%   anchored at the start, so for instance
+%   \cs{peek_regex_remove:nTF}~|{|~|a|~|}| is essentially equivalent to
+%   \cs{peek_charcode_remove:NTF}~|a|.
+%   \begin{texnote}
+%     Implicit character tokens are correctly considered by
+%     \cs{peek_regex_remove:nTF} as control sequences, while functions
+%     that inspect individual tokens (for instance
+%     \cs{peek_charcode:NTF}) only take into account their meaning.
+%   \end{texnote}
+% \end{function}
+%
 % \section{Description of all possible tokens}
 % \label{sec:l3token:all-tokens}
 %
